# Chord

./: .env.example  .gitignore  .moosenet-pipeline.yaml  Cargo.toml  README.md  build.rs
crates/chord-secrets/: Cargo.toml  README.md
crates/chord-secrets/src/: lib.rs
crates/chord-tui/: Cargo.toml  README.md
crates/chord-tui/src/: app.rs  config.rs  confirm.rs  connection.rs  lib.rs  main.rs  secret.rs  ui.rs
crates/chord-tui/src/modes/: mod.rs  terminus_fleet.rs
crates/chord-tui/src/modes/chord/: backends.rs  chord_client.rs  cleanswap.rs  coordinator.rs  mod.rs  models.rs  serving.rs
crates/chord-tui/src/modes/terminus/: audit.rs  fleet.rs  mcp_client.rs  mod.rs  secrets.rs  tools.rs  transport.rs
deploy/: supra-router.service
deploy/model-storage-manager/: README.md  model-storage-manager.service  model-storage-manager.sh  model-storage-manager.timer
docs/: README.md  architecture.md  assistant-results.md  chord-tui.md  coding-proxy.md  contributing-results.md  diffusion-gemma-managed.md  egress.md  getting-started.md  index.md  model-testing-methodology.md  rout-01-routing-map.md  serving.md  snap-persistence.md  test-results.md
docs/guides/: gpu-exclusive-handoff.md  idle-mode.md  index.md  model-tiering-operations.md
docs/reference/: agentic.md  architecture.md  chord-tui.md  documentation.md  gpu_exclusive.md  harness.md  idle-mode-free-the-host-for-the-compiler-bld-09.md  index.md  mcp-tool-dispatch.md  mcp_proxy.md  models.md  overview.md  router.md  routes.md  secrets-own-infisical-client.md  serving.md  snap.md  status.md  supervisor.md  sweep_status.md  test-results.md
docs/scripts/: query_assistant_results.py
specs/: S94-chord-coding-proxy.md
src/: audit.rs  batch_report.rs  catalog.rs  coding_proxy.rs  config.rs  control.rs  diffusion.rs  embeddings.rs  gpu_exclusive.rs  lib.rs  main.rs  mcp_proxy.rs  metrics.rs  routes.rs  secrets_bootstrap.rs  session.rs  sweep_session.rs  tool_allowlist.rs  version.rs
src/admin/: idle.rs  mod.rs
src/agentic/: argument_guard.rs  context.rs  loop_runner.rs  mod.rs  model_router.rs  response_guard.rs  result_guard.rs  router_classifier.rs  streaming.rs
src/models/: backends.rs  batch_suitability.rs  capability.rs  coding_selector.rs  eviction.rs  gc.rs  mod.rs  registry.rs  rope_ingest.rs  routing.rs  selector.rs  transfer.rs  work_type.rs
src/router/: eval.rs  eval_storage.rs  mod.rs  policy.rs  slm_router.rs
src/routing/: assistant_profile.rs  mod.rs
src/serving/: eviction.rs  launcher.rs  memory_model.rs  mod.rs  mode.rs  profile.rs  release_verify.rs  residency.rs  swap.rs
src/snap/: activity.rs  analytics.rs  api.rs  config.rs  health.rs  inventory.rs  mod.rs  state.rs  storage.rs  vllm.rs  vram.rs
src/supervisor/: egress_filter.rs  egress_policy.rs  launch_env.rs  launch_isolation.rs  mod.rs  netns.rs
src/sweep_status/: api.rs  config.rs  db.rs  gpu.rs  log.rs  mod.rs  ollama.rs  poll.rs  snapshot.rs  systemd.rs  verdict.rs
src/validation/: mod.rs  yarn_validate.rs
tests/: diffusion_forwarding.rs  e2e.rs  netns_integration.rs  pii_self_check.rs  rout06_router_regression_fixture.rs  serving_chat_pin.rs  serving_launch.rs  serving_memory_model.rs  serving_mode.rs  serving_residency.rs  serving_swap.rs
