[workspace]
# The root `chord-proxy` package plus S91's control TUI client sub-crate.
# `chord-tui` is a CLIENT of Chord's stable control endpoints — it never
# links or restarts the proxy binary.
members = [".", "crates/chord-tui"]
resolver = "2"

[package]
name = "chord-proxy"
version = "1.4.0"
edition = "2021"
license = "MIT"
description = "Chord unified proxy — LLM inference + MCP tool gateway"
repository = "https://github.com/moosenet-io/chord"
readme = "README.md"

[[bin]]
name = "chord-proxy"
path = "src/main.rs"

# BSUIT-02: read-only performance-curve report generator for run_score_points.
[[bin]]
name = "batch-report"
path = "src/bin/batch-report.rs"

[lib]
name = "chord_proxy"
path = "src/lib.rs"

[features]
# Task 2 (federation): gates the live integration test that calls through to
# the REAL running `terminus_personal` backend. NOT part of default
# `cargo test --workspace` — run explicitly with
# `cargo test --features personal-live-test` from a host that can reach it,
# with PERSONAL_BACKEND_URL/PERSONAL_BACKEND_TOKEN set.
personal-live-test = []

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
regex = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
subtle = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio-stream = "0.1"
futures-util = "0.3"
terminus-rs = { version = "1.1.0", registry = "gitea" }
once_cell = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], default-features = false }

# S88 ISO-02: the network-namespace primitive (unshare + CLONE_NEWNET) and the
# libc bindings used to fail-closed probe CAP_NET_ADMIN. Linux-only — the
# privileged netns path is `#[cfg(target_os = "linux")]`; on any other platform
# `netns::prepare` returns `Unsupported` and this dep is not pulled in.
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["sched", "process"] }

[dev-dependencies]
httpmock = "0.7"
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
tempfile = "3"
serial_test = "3"
