[package]
name = "chord-secrets"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared <secret-manager> Universal Auth client for Chord (chord-proxy + chord-tui) — CSEC-01"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
httpmock = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serial_test = "3"
